--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
         <div class="contact-conten">
             <h3>Contacto</h3>
-            <form action="" class="form-contact">
+            <form id="formulario" class="form-contact">
                 <div class="contact-nombre">
                     <input class="contact-nombre-input" type="text" id="nombreInput">
                     <label class="contact-nombre-label" id="nombreLabel">Nombre</label>
@@ -100,12 +100,15 @@
                 <div class="contact-email" id="contact-email">
                     <input class="contact-email-input" type="email" id="emailInput">
                     <label class="contact-email-label" id="emailLabel">Email</label>
+                    <div id="chackEmail" class="chackEmail"><ion-icon name="checkmark-outline"></ion-icon></div>
                 </div>
                 <div class="contact-text">
                     <textarea class="contact-text-textarea" id="textarea" ></textarea>
                     <label class="contact-text-label" id="textareaLabel">Mensaje</label>
                 </div>
-                <button type="submit">Enviar</button>
+                <button class="buttonContacto" type="submit">
+                    <span></span><span></span><span></span><span></span>
+                    Enviar</button>
             </form>
         </div>
     </main>
