--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="sass/css/styles.css">
 </head>
 <body>
-    <div class="lds-ring loader" id="loader"><div></div><div></div><div></div><div></div><span class="loader-text">B</span></div>
+    <div class="lds-ring loader" id="loader"><div></div><div></div><div></div><div></div></div>
     <header>
         <nav class="nav">
             <div class="navContainer">
@@ -158,6 +158,7 @@
     <script src="https://cdn.jsdelivr.net/npm/glider-js@1.7.7/glider.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <!--JavaScript-->
+    <script src="js/stock.js"></script>
     <script src="js/append.js"></script>
     <script src="js/carrito.js"></script>
     <script src="js/index.js"></script>
