--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <meta name="description" content="La tienda de vinos que estabas esperando. Las más exclusivas Bodegas, todas las Variedades y al mejor Precio. Sentí Bouquets.">
+
     <title>Bouquet | Tienda de Vinos </title>
     <link rel="icon" href="assets/vino.png">
 
