--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
         </nav>
         <nav class="nav-mobile">
             <div class="nav-mobile-container">
-                <a href="#home"><p>Inicio</p></a>
-                <a href="#productos"><p>Productos</p></a>
-                <a href="#contacto"><p>Contacto</p></a>
+                <a class="nav-mobile-item" href="#home"><p>Inicio</p></a>
+                <a class="nav-mobile-item" href="#productos"><p>Productos</p></a>
+                <a class="nav-mobile-item" href="#contacto"><p>Contacto</p></a>
             </div>
         </nav>
         <div class="modal-carrito" id="modal-carrito">
